shawk/awk/awkson/tests/test-accept/parser-accept/parser_accept_fatal_err.txt
awkson.awk: error: ./test-inputs/parser-tests/parser_test_err.json:2:3
awkson.awk: error: expected one of 'string }', got 'unknown characters'
  @x"firstName": "John",
  ^
awkson.awk: quitting because of -vFatalError=1
